--- a/ClickTheRedBox/ClickTheRedBox.csproj
+++ b/ClickTheRedBox/ClickTheRedBox.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\local.pubxml" />
+    <None Include="Properties\PublishProfiles\test.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
